<resources>
    <string name="app_name" translatable="false">Perfil</string>
    <string name="hint_name">Name:</string>
    <string name="hint_email">Email:</string>
    <string name="hint_wensite">Website:</string>
    <string name="hint_phone">Phone:</string>
    <string name="hint_location">Location:</string>
    <string name="main_show_map">View Map</string>

    <string name="hint_ubication">Enable Location</string>
    <string name="main_settiings">Enable Location</string>
    <string name="edit_title">Edit user data</string>
    <string name="hint_latitud">Latitude:</string>
    <string name="hint_Longitud">Lenght:</string>

    <string name="key_name">k_name</string>
    <string name="key_email">k_email</string>
    <string name="key_website">k_website</string>
    <string name="key_phone">k_phone</string>
    <string name="key_latitud">k_lat</string>
    <string name="key_longitud">k_long</string>
    <string name="profile_error_no_resolve">No compatible app found</string>
    <string name="main_settings">Enable Ubication</string>
    <string name="key_image">Key_image</string>
    <string name="settings_title">Settings</string>
    <string name="preferences_touch_title">Touch</string>
    <string name="preferences_enable_clicks">Enable Clicks</string>
    <string name="preferences_key_enable_clicks">pref_enable_cliks</string>
    <string name="preferences_data_title">Data</string>
    <string name="preferences_delete_data">Delete user data</string>
    <string name="preferences_key_delete_data">pref_delete_data</string>
    <string name="preferences_restore_data">Restore data and settings</string>
    <string name="preferences_key_restore_data">pref_restore_data</string>
    <string name="preferences_ui_title">Interface</string>
    <string name="preferences_img_size_small">Small</string>
    <string name="preferences_img_size_medium">Medium</string>
    <string name="preferences_img_size_large">Large</string>
    <string name="preferences_key_img_size_small">pref_small</string>
    <string name="preferences_key_img_size_medium">pref_medium</string>
    <string name="preferences_key_img_size_large">pref_large</string>
    <string name="preferences_ui_img_size">Image size</string>
    <string name="preferences_key_ui_img_size">pref_ui_img_size</string>
    <string name="preferenceS_settings_title">Delete settings</string>
    <string name="preferenceS_key_settings_title">pref_key_delete_settings</string>
    <string name="preferences_restore_settings">Restore settings</string>
    <string name="preferences_key_restore_settings">pref_restore_settings</string>


</resources>