<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/common_padding_default"
        android:paddingBottom="@dimen/common_padding_default"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_default"
            app:cardCornerRadius="@dimen/radius_of_image_perfil"
            app:cardElevation="@dimen/common_paddig_min">
            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/profile_image_size_large"
                android:layout_height="@dimen/profile_image_size_large"
                android:src="@drawable/cursos_android_ant"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_name"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_text_size"
            android:textColor="@color/black"
            tools:text="Cursos Android ANT"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_email"/>
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_text_size_middle"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:autoLink="email"
            android:textColorLink="@color/black"
            android:linksClickable="false"
            tools:text="cursosandroidant@gmail.com"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_wensite"/>
        <TextView
            android:id="@+id/tvWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:autoLink="web"
            android:textColorLink="@color/blue_700"
            android:linksClickable="false"
            tools:text="www.cursosandroidant.com"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_phone"/>
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size_middle"
            tools:text="+52 555 384 9345"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/hint_location"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/main_show_map"
            android:textStyle="bold"
            android:textSize="@dimen/profile_text_size_middle"
            android:drawableEnd="@drawable/icono_map"
            app:drawableTint="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_large"
            android:text="@string/main_settings"
            android:drawableStart="@drawable/ic_settings"/>
    </LinearLayout>
</ScrollView>